// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuItem > should match snapshot when all props provided 1`] = `
<button
  aria-checked="true"
  class="components-button components-menu-item__button my-class is-compact"
  role="menuitemcheckbox"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    My item
  </span>
  <span
    class="components-menu-item__shortcut"
  >
    mod+shift+alt+w
  </span>
  <svg
    aria-hidden="true"
    class="components-menu-items__item-icon has-icon-right"
    focusable="false"
    height="24"
    stroke="currentColor"
    stroke-width="1.5"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 10H20M4 14H8M10 14H14M16 14H20"
      vector-effect="non-scaling-stroke"
    />
  </svg>
</button>
`;

exports[`MenuItem > should match snapshot when info is provided 1`] = `
<button
  class="components-button components-menu-item__button is-compact"
  role="menuitem"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    <span
      class="components-menu-item__info-wrapper"
    >
      <span
        class="components-menu-item__item"
      >
        My item
      </span>
      <span
        class="components-menu-item__info"
      >
        Extended description of My Item
      </span>
    </span>
  </span>
</button>
`;

exports[`MenuItem > should match snapshot when isSelected and role are optionally provided 1`] = `
<button
  class="components-button components-menu-item__button my-class is-compact"
  role="menuitem"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    My item
  </span>
  <span
    class="components-menu-item__shortcut"
  >
    mod+shift+alt+w
  </span>
  <svg
    aria-hidden="true"
    class="components-menu-items__item-icon has-icon-right"
    focusable="false"
    height="24"
    stroke="currentColor"
    stroke-width="1.5"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 10H20M4 14H8M10 14H14M16 14H20"
      vector-effect="non-scaling-stroke"
    />
  </svg>
</button>
`;

exports[`MenuItem > should match snapshot when only label provided 1`] = `
<button
  class="components-button components-menu-item__button is-compact"
  role="menuitem"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    My item
  </span>
</button>
`;
